--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -8,6 +8,10 @@ body {
   height: 100vh;
   /* overflow: hidden; */
 }
+a {
+  text-decoration: none;
+  color: var(--link-color);
+}
 
 button, input, textarea {
   font-family: inherit;
